clang/test/BSC/Negative/Generic/GenericTypeMethods/generic_struct_error_typename/generic_struct_error_typename.cbs
// RUN: %clang_cc1 -verify %s

typedef long long int LLInt; // expected-note {{'LLInt' declared here}}

struct Array<LLint B> // expected-error {{unknown type name 'LLint'; did you mean 'LLInt'?}}
{
    int data[B];
};

int main() {
    struct Array<5> arr = {};
    return 0;
}
